--- a/Css/styles.css
+++ b/Css/styles.css
@@ -1,9 +1,174 @@
-/* CONFIGURACION GLOBALES */
+html {
+    box-sizing: border-box;
+    font-size: 62.5%;  /*1 rem = 10px*/ 
 
-body{
-    background-color: aquamarine;
-    border: 5px dotted black;
-    font-family: Arial, Helvetica, sans-serif;
 }
 
 
+
+*, *:before, *:after {
+    box-sizing: inherit;  /*hereda las propiedades de su padre*/
+}
+
+/* CONFIGURACION GLOBALES */
+
+.fondo{
+    background-color: aqua;
+    position: absolute;    
+}
+
+.estilo{
+    color: #FFFFFF;
+    font-family: 'Montserrat';
+    font-style: normal;
+    font-weight: 300;
+    font-size: 26.0163px;
+    line-height: 32px;
+}
+
+
+
+.nombre{
+    position: absolute;
+    width: 843px;
+    height: 159px;
+    left: 187.32px;
+    top: 316.1px;    
+    font-family: 'Montserrat';
+    font-style: normal;
+    font-weight: 500;
+    font-size: 13rem;
+    line-height: 159px;
+    color: #FFFFFF;
+}
+
+.apellido{
+    position: absolute;
+    width: 858px;
+    height: 277px;
+    left: 182.11px;
+    top: 411.06px;    
+    font-family: 'Montserrat';
+    font-style: normal;
+    font-weight: 800;
+    font-size: 22.7rem;
+    line-height: 277px;
+    color: #FFFFFF;
+}
+
+.titulo{
+    position: absolute;
+    width: 827px;
+    height: 68px;
+    left: 200.33px;
+    top: 651.71px;    
+    font-family: 'Montserrat';
+    font-style: italic;
+    font-weight: 400;
+    font-size: 5.6rem;
+    line-height: 68px;
+    color: #FFFFFF;
+}
+
+.flecha1{
+    position: absolute;
+    width: 15.25px;
+    height: 22.11px;
+    left: 823.41px;
+    top: 63.74px;
+}
+.pagina1{
+    position: absolute;
+    width: 114px;
+    height: 32px;
+    left: 846.83px;
+    top: 61.14px;    
+    font-family: 'Montserrat';
+    font-style: normal;
+    font-weight: 300;
+    font-size: 26.0163px;
+    line-height: 32px;
+    color: #FFFFFF;
+}
+
+.flecha2{
+    position: absolute;
+    width: 15.25px;
+    height: 22.11px;
+    left: 988.62px;
+    top: 63.74px;
+}
+
+.pagina2{
+    position: absolute;
+    width: 111px;
+    height: 32px;
+    left: 1012.03px;
+    top: 61.14px;    
+    font-family: 'Montserrat';
+    font-style: normal;
+    font-weight: 300;
+    font-size: 26.0163px;
+    line-height: 32px;
+    color: #FFFFFF;
+
+}
+
+.flecha3{
+    position: absolute;
+    width: 15.25px;
+    height: 22.11px;
+    left: 1149.92px;
+    top: 63.74px;
+}
+
+.pagina3{
+    position: absolute;
+    width: 150px;
+    height: 32px;
+    left: 1173.33px;
+    top: 61.14px;    
+    font-family: 'Montserrat';
+    font-style: normal;
+    font-weight: 300;
+    font-size: 26.0163px;
+    line-height: 32px;
+    color: #FFFFFF;
+}
+
+.flecha4{
+    position: absolute;
+    width: 15.25px;
+    height: 22.11px;
+    left: 1345.04px;
+    top: 63.74px;
+}
+.pagina4{
+    position: absolute;
+    width: 153px;
+    height: 32px;
+    left: 1368.46px;
+    top: 61.14px;    
+    font-family: 'Montserrat';
+    font-style: normal;
+    font-weight: 300;
+    font-size: 26.0163px;
+    line-height: 32px;
+    color: #FFFFFF;
+}
+
+/* Lucas Daniel Romeo */
+
+.home{
+position: absolute;
+width: 407px;
+height: 48px;
+left: 278.37px;
+top: 50.73px;
+font-family: 'Montserrat';
+font-style: normal;
+font-weight: 500;
+font-size: 39.0244px;
+line-height: 48px;
+color: #FFFFFF;
+}
