--- a/Css/fondo.css
+++ b/Css/fondo.css
@@ -11,8 +11,7 @@ html {
 }
 
 .area{ 
-    background: linear-gradient(180deg, #0A4D68 0%, #0A4D68 0.01%, #096371 97.22%); 
-    /* background: -webkit-linear-gradient(180deg, #0A4D68 0%, #0A4D68 0.01%, #096371 97.22%);   */
+    background: -webkit-linear-gradient(180deg, #0A4D68 0%, #0A4D68 0.01%, #096371 97.22%);
     width: 100%;
     height:100vh;
     position: absolute;
