--- a/Css/styles.css
+++ b/Css/styles.css
@@ -44,6 +44,11 @@ li a:hover {
     background-color: #0cb0b6;
 }
 
+.home{
+    font-style: normal;
+    font-weight: 600;
+}
+
 
 
 /* Tipografia general para todas las paginas */
@@ -51,6 +56,15 @@ li a:hover {
 .estiloPrin{
     font-family: 'Montserrat';
     color: #FFFFFF;
+}
+
+.lista{
+    list-style-type: none;
+    overflow: hidden;
+    display: flex;
+    margin: 0;
+    padding: 0;
+    background-color: #0A4D68;
 }
 
 /* Titulo Principal */
@@ -102,44 +116,44 @@ li a:hover {
 
 .t1{
     position: absolute;
-    width: 174px;
+    width: 100vw;
     height: 48px;
-    left: 218.54px;
-    top: 183.41px;
+    left: 20vh;
+    top: 18vh;
 }
 
 .t2{
     position: absolute;
-    width: 187px;
+    width: 100vw;
     height: 48px;
-    left: 826.02px;
-    top: 183.41px;
+    left: 82vh;
+    top: 18vh;
 
 }
 
 .t3{
     position: absolute;
-    width: 262px;
+    width: 100vw;
     height: 48px;
-    left: 1443.9px;
-    top: 183.41px;
+    left: 140vh;
+    top: 18vh;
 }
 
 .t4{
     position: absolute;
-    width: 261px;
+    width: 100vw;
     height: 48px;
-    left: 824.11px;
-    top: 590.57px;
+    left: 82vh;
+    top: 59vh;
 
 }
 
 .t5{
     position: absolute;
-    width: 255px;
+    width: 100vw;
     height: 48px;
-    left: 1446.5px;
-    top: 591.87px;
+    left: 140vh;
+    top: 59vh;
 }
 
 
@@ -147,45 +161,57 @@ li a:hover {
 .texto{
     font-style: italic;
     font-weight: 300;
+    font-size: 1vw;
+    overflow: hidden;
 }
 
 .uno{
     position: absolute;
-    width: 366px;
-    height: 366px;
-    left: 184px;
-    top: 263px;;
+    width: 300px;
+    height: 250px;
+    left: 18vh;
+    top: 26vh;
 }
 
 .dos{
     position: absolute;
-    width: 361px;
-    height: 208px;
-    left: 773px;
-    top: 263px;
+    width: 300px;
+    height: 200px;
+    left: 77vh;
+    top: 26vh;
 }
 
 .tres{
     position: absolute;
-    width: 361px;
-    height: 208px;
-    left: 1403px;
-    top: 263px;
+    width: 300px;
+    height: 200px;
+    left: 140vh;
+    top: 26vh;
 }
 
 .cuatro{
     position: absolute;
-    width: 361px;
-    height: 208px;
-    left: 773px;
-    top: 671px;
+    width: 300px;
+    height: 200px;
+    left: 77vh;
+    top: 67vh;
 }
 
 .cinco{
     position: absolute;
-    width: 361px;
-    height: 208px;
-    left: 1403px;
-    top: 671px;
+    width: 300px;
+    height: 200px;
+    left: 140vh;
+    top: 67vh;
 }
 
+/* Estilos de la Pagina Estudios */
+
+.peso{
+    font-style: normal;
+    font-weight: 300;
+    font-size: 2vw;
+    color: black;
+    display: flex;
+    float: left;
+}
