--- a/Css/styles.css
+++ b/Css/styles.css
@@ -20,11 +20,11 @@ html {
 	margin: 0;
 	padding: 0;
 	overflow: hidden;
-	background-color: #00FFCA;
+    background-color: #0A4D68;
     font-family: 'Montserrat';
     font-style: normal;
     font-weight: 300;
-    font-size: 26.0163px;
+    font-size: 2vw;
     justify-content: center;
 }
 
@@ -35,55 +35,165 @@ html {
 
 li a{
     display: block;
-	color: #0A4D68;
+	color: #FFFFFF;
 	text-align: center;
 	text-decoration: none;
 }
 
 li a:hover {
-    background-color: black;
+    background-color: #0cb0b6;
 }
 
 
 
-/* Titulo Principal */
+/* Tipografia general para todas las paginas */
 
 .estiloPrin{
     font-family: 'Montserrat';
     color: #FFFFFF;
 }
+
+/* Titulo Principal */
+
+
+
 .nombre{
     position: absolute;
-    width: 843px;
+    width: 100vw;
     height: 159px;
-    left: 187.32px;
-    top: 316.1px;
+    left: 30vh;
+    top: 15vw;
     font-style: normal;
     font-weight: 500;
-    font-size: 13rem;
-    line-height: 159px;
+    font-size: 9vw;
 }
 
 .apellido{
     position: absolute;
-    width: 858px;
+    width: 100vw;
     height: 277px;
-    left: 182.11px;
-    top: 411.06px;
+    left: 30vh;
+    top: 22vw;
     font-style: normal;
     font-weight: 800;
-    font-size: 22.7rem;
-    line-height: 277px;
+    font-size: 16vw;
 }
 
 .titulo{
     position: absolute;
-    width: 827px;
+    width: 100vw;
     height: 68px;
-    left: 200.33px;
-    top: 651.71px;
+    left: 30vh;
+    top: 38vw;
     font-style: italic;
     font-weight: 400;
-    font-size: 5.6rem;
-    line-height: 68px;
+    font-size: 4vw;
+}
+
+/* Estilos de la Pagina de Sobre Mi */
+
+/* Estilo de los titulos */
+.titulos{
+    font-style: normal;
+    font-weight: 600;
+    display: flex;
+    float: left;
+}
+
+.t1{
+    position: absolute;
+    width: 174px;
+    height: 48px;
+    left: 218.54px;
+    top: 183.41px;
+}
+
+.t2{
+    position: absolute;
+    width: 187px;
+    height: 48px;
+    left: 826.02px;
+    top: 183.41px;
+
+}
+
+.t3{
+    position: absolute;
+    width: 262px;
+    height: 48px;
+    left: 1443.9px;
+    top: 183.41px;
+}
+
+.t4{
+    position: absolute;
+    width: 261px;
+    height: 48px;
+    left: 824.11px;
+    top: 590.57px;
+
+}
+
+.t5{
+    position: absolute;
+    width: 255px;
+    height: 48px;
+    left: 1446.5px;
+    top: 591.87px;
+}
+
+
+/* Estilos de los textos */
+.texto{
+    font-style: italic;
+    font-weight: 300;
+}
+
+.uno{
+    position: absolute;
+    width: 366px;
+    height: 366px;
+    left: 184px;
+    top: 263px;;
+}
+
+.dos{
+    position: absolute;
+    width: 361px;
+    height: 208px;
+    left: 773px;
+    top: 263px;
+}
+
+.tres{
+    position: absolute;
+    width: 361px;
+    height: 208px;
+    left: 1403px;
+    top: 263px;
+}
+
+.cuatro{
+    position: absolute;
+    width: 361px;
+    height: 208px;
+    left: 773px;
+    top: 671px;
+}
+
+.cinco{
+    position: absolute;
+    width: 361px;
+    height: 208px;
+    left: 1403px;
+    top: 671px;
+}
+
+.listaFondo{
+    list-style-type: none;
+    display: flex;
+    float: left;
+    margin: 0;
+    padding: 0;
+
 }
