--- a/Css/styles.css
+++ b/Css/styles.css
@@ -44,11 +44,6 @@ li a:hover {
     background-color: #0cb0b6;
 }
 
-.home{
-    font-style: normal;
-    font-weight: 600;
-}
-
 
 
 /* Tipografia general para todas las paginas */
@@ -56,15 +51,6 @@ li a:hover {
 .estiloPrin{
     font-family: 'Montserrat';
     color: #FFFFFF;
-}
-
-.lista{
-    list-style-type: none;
-    overflow: hidden;
-    display: flex;
-    margin: 0;
-    padding: 0;
-    background-color: #0A4D68;
 }
 
 /* Titulo Principal */
@@ -116,44 +102,44 @@ li a:hover {
 
 .t1{
     position: absolute;
-    width: 100vw;
+    width: 174px;
     height: 48px;
-    left: 20vh;
-    top: 18vh;
+    left: 218.54px;
+    top: 183.41px;
 }
 
 .t2{
     position: absolute;
-    width: 100vw;
+    width: 187px;
     height: 48px;
-    left: 82vh;
-    top: 18vh;
+    left: 826.02px;
+    top: 183.41px;
 
 }
 
 .t3{
     position: absolute;
-    width: 100vw;
+    width: 262px;
     height: 48px;
-    left: 140vh;
-    top: 18vh;
+    left: 1443.9px;
+    top: 183.41px;
 }
 
 .t4{
     position: absolute;
-    width: 100vw;
+    width: 261px;
     height: 48px;
-    left: 82vh;
-    top: 59vh;
+    left: 824.11px;
+    top: 590.57px;
 
 }
 
 .t5{
     position: absolute;
-    width: 100vw;
+    width: 255px;
     height: 48px;
-    left: 140vh;
-    top: 59vh;
+    left: 1446.5px;
+    top: 591.87px;
 }
 
 
@@ -161,57 +147,53 @@ li a:hover {
 .texto{
     font-style: italic;
     font-weight: 300;
-    font-size: 1vw;
-    overflow: hidden;
 }
 
 .uno{
     position: absolute;
-    width: 300px;
-    height: 250px;
-    left: 18vh;
-    top: 26vh;
+    width: 366px;
+    height: 366px;
+    left: 184px;
+    top: 263px;;
 }
 
 .dos{
     position: absolute;
-    width: 300px;
-    height: 200px;
-    left: 77vh;
-    top: 26vh;
+    width: 361px;
+    height: 208px;
+    left: 773px;
+    top: 263px;
 }
 
 .tres{
     position: absolute;
-    width: 300px;
-    height: 200px;
-    left: 140vh;
-    top: 26vh;
+    width: 361px;
+    height: 208px;
+    left: 1403px;
+    top: 263px;
 }
 
 .cuatro{
     position: absolute;
-    width: 300px;
-    height: 200px;
-    left: 77vh;
-    top: 67vh;
+    width: 361px;
+    height: 208px;
+    left: 773px;
+    top: 671px;
 }
 
 .cinco{
     position: absolute;
-    width: 300px;
-    height: 200px;
-    left: 140vh;
-    top: 67vh;
+    width: 361px;
+    height: 208px;
+    left: 1403px;
+    top: 671px;
 }
 
-/* Estilos de la Pagina Estudios */
-
-.peso{
-    font-style: normal;
-    font-weight: 300;
-    font-size: 2vw;
-    color: black;
+.listaFondo{
+    list-style-type: none;
     display: flex;
     float: left;
+    margin: 0;
+    padding: 0;
+
 }
