--- a/Css/styles.css
+++ b/Css/styles.css
@@ -509,3 +509,12 @@ li a:hover {
     justify-content: center;
     align-items: center;
 }
+
+
+.boton{
+    padding: 0;
+    margin: 0;
+    border-radius: 20%;
+    background-color: #0A4D68;
+
+}
