--- a/Css/prueba.css
+++ b/Css/prueba.css
@@ -1,236 +1,14 @@
-.body{
-    background: #5386f3;
-}
-/* Linea de TIempo estilo y responsivo */
-
-
-.listaFondo ul{
-    list-style-type: none;
-    display: flex;
-    justify-content: center;
-    align-items: center;
-    height: 100vh;
-
+.porcentaje-circulo {
+  display: inline-block;
+  position: absolute;
+  top: -10px;
+  right: -10px;
+  font-size: 12px;
 }
 
-.listaFondo ul li{
-    display: flex;
-    margin: 10px;
-    padding: 10px;
-    background-color: #5386f3;
-    border-radius: 50%;
-    width: 30px;
-    height: 30px;
-    margin-right: calc(10% - 20px);
-}
-
-.listaFondo .horizontal{
-    background-color: aquamarine;
-    height: 10px;
-    width: 62%;
-    position: absolute;
-    top: 50%;
-    transform: translatex(25%);
-    z-index: -1;
-}
-
-@media screen and (max-width: 1024px){
-    .listaFondo .horizontal{
-        width: 65%;
-    }
-}
-
-@media screen and (max-width: 768px){
-    .listaFondo .horizontal{
-        transform: translateX(20%);
-        width: 70%;
-    }
-}
-
-@media screen and (max-width: 450px){
-    .listaFondo ul{
-        list-style-type: none;
-        display: block;
-        margin: 0;
-        padding: 0;
-    }
-
-    .listaFondo ul li{
-        margin-bottom: calc(20% - 20px);
-        margin-right: 0;
-    }
-
-     .listaFondo .horizontal{
-        background-color: aquamarine;
-        height: 100%;
-        width: 10px;
-        margin: 10px 10px 10px 25px;
-        top: 5%;
-    }
-}
-
-/* Texto de la Liena de tiempo responsivo */
-
-.listaFondo .respo {
-    display: flex;
-    max-width: 1080px;
-    margin: 50px auto;
-    padding: 0 20px;
-    border-radius: 5px;
-    background-color: blueviolet;
-}
-
-
-
-.listaFondo .respo section:nth-child(1){
-    height: 30%;
-    top: 20%;
-}
-
-
-
-
-
-
-
-
-
-
-
-
-
-
-
-
-
-
-
-
-
-
-
-
-
-* {
-    box-sizing: border-box;
-  }
-  
-  body {
-    background-image: linear-gradient(to bottom, #222, #444);
-    color: #bbb;
-    padding: 1rem;
-    font-family: "Playfair Display", serif;
-  }
-  
-  h1 {
-    text-align: center;
-    font-family: "Raleway", sans-serif;
-  }
-  
-  .timeline {
-    position: relative;
-    padding: 1rem;
-    margin: 0 auto;
-    max-width: 1300px;
-  }
-  .timeline:before {
-    content: "";
-    position: absolute;
-    height: 100%;
-    border: 1px solid hotpink;
-    right: 40px;
-    top: 0;
-  }
-  .timeline:after {
-    content: "";
-    display: table;
-    clear: both;
-  }
-  @media screen and (min-width: 700px) {
-    .timeline {
-      padding: 2rem;
-    }
-    .timeline:before {
-      left: calc(50% - 1px);
-      right: auto;
-    }
-  }
-  
-  .timeline__item {
-    padding: 1rem;
-    border: 2px solid hotpink;
-    border-image: linear-gradient(to right, skyblue 0%, hotpink 100%);
-    border-image-slice: 1;
-    position: relative;
-    margin: 1rem 3rem 1rem 1rem;
-    clear: both;
-  }
-  .timeline__item:after, .timeline__item:before {
-    content: "";
-    position: absolute;
-  }
-  .timeline__item:before {
-    right: -10px;
-    top: calc(50% - 5px);
-    border-style: solid;
-    border-color: hotpink hotpink transparent transparent;
-    border-width: 10px;
-    transform: rotate(45deg);
-  }
-  @media screen and (min-width: 700px) {
-    .timeline__item {
-      width: 44%;
-      margin: 1rem;
-    }
-    .timeline__item:nth-of-type(2n) {
-      float: right;
-      margin: 1rem;
-      border-image: linear-gradient(to right, hotpink 0%, skyblue 100%);
-      border-image-slice: 1;
-    }
-    .timeline__item:nth-of-type(2n):before {
-      right: auto;
-      left: -10px;
-      border-color: transparent transparent hotpink hotpink;
-    }
-  }
-  
-  .timeline__item--year {
-    text-align: center;
-    max-width: 150px;
-    margin: 0 48px 0 auto;
-    font-size: 1.8rem;
-    background-color: #333;
-    line-height: 1;
-    border-image: none;
-    padding: 0.5rem 1rem 1rem;
-  }
-  .timeline__item--year:before {
-    display: none;
-  }
-  @media screen and (min-width: 700px) {
-    .timeline__item--year {
-      text-align: center;
-      margin: 0 auto;
-    }
-    .timeline__item--year:nth-of-type(2n) {
-      float: none;
-      margin: 0 auto;
-      border-image: none;
-    }
-    .timeline__item--year:nth-of-type(2n):before {
-      display: none;
-    }
-  }
-  
-  .timeline__title {
-    margin: 0;
-    font-family: "Raleway", sans-serif;
-    font-size: 1.5em;
-  }
-  
-  .timeline__blurb {
-    line-height: 1.5;
-    font-size: 1rem;
-    margin: 0.5rem 0 0;
-  }
+.miBoton {
+  position: relative;
+  width: 40px; /* Ancho ajustado según el tamaño de la imagen */
+  height: 40px; /* Altura ajustada según el tamaño de la imagen */
+  border-radius: 50%;
+  overflow: hidden;
